--- a/Selection Sort/selection_style.css
+++ b/Selection Sort/selection_style.css
@@ -1,40 +1,52 @@
 body {
     font-family: "Courier New";
   }
-  
-  #elements {
-    padding-top: 100px;
-    width: 500px;
-    height: 100px;
-  }
-  
-  #placeholder {
-    display: none;
-  }
-  
-  .element {
-    border: 2px black solid;
-    font-size: 30px;
-    line-height: 50px;
-    text-align: center;
-    display: inline;
-    margin-right: 10px;
-    margin-left: 0;
-    padding-top: 0;
-  }
-  
-  .compareToElement {
-    background-color: #696FFF;
-  }
-  
-  .comparingElement {
-    background-color: #FF4E50;
-  }
-  
-  .minimumElement {
-    background-color: #49FF70;
-  }
-  
-  #stepButton {
-    display: none;
-  }
+
+#elements {
+  height: auto;
+}
+
+#placeholder {
+  display: none;
+}
+
+#startButton {
+  height: 40px;
+  width: 120px;
+  margin-top: 10px;
+}
+
+.element {
+  border: 2px black solid;
+  position: relative;
+  bottom: 5px;
+  font-size: 20px;
+  text-align: center;
+  width: 36px;
+  margin-right: 5px;
+  margin-left: 0;
+  padding-top: 0;
+  display: inline-block;
+}
+
+.element p {
+  position: relative;
+  bottom: 5px;
+}
+
+
+.compareToElement {
+  background-color: #696FFF;
+}
+
+.comparingElement {
+  background-color: #FF4E50;
+}
+
+.minimumElement {
+  background-color: #49FF70;
+}
+
+#stepButton {
+  display: none;
+}
