--- a/Selection Sort/selection_style.css
+++ b/Selection Sort/selection_style.css
@@ -26,6 +26,15 @@ body {
   margin-top: 10px;
 }
 
+#searchNum {
+  height: 30px;
+  width: 60px;
+  font-size: 20px;
+  position: relative;
+  top: 3px;
+  display: none;
+}
+
 .element {
   border: 2px black solid;
   position: relative;
@@ -45,15 +54,15 @@ body {
 }
 
 
-.compareToElement {
+.compareToElement, .leftElement, .rightElement {
   background-color: #696FFF;
 }
 
-.comparingElement {
+.comparingElement, .wrongElement {
   background-color: #FF4E50;
 }
 
-.minimumElement {
+.minimumElement, .midElement {
   background-color: #49FF70;
 }
 
